--- a/scss/sty.scss
+++ b/scss/sty.scss
@@ -34,16 +34,20 @@ $clr-2: hsl(120, 61%, 50%);
 
 html {
   font-family: sans-serif;
-  @include mq('max', $phone){
+
+  @include mq('max', $phone) {
     font-size: 12px;
   }
-  @include mq($phone, $tablet){
+
+  @include mq($phone, $tablet) {
     font-size: 14px;
   }
-  @include mq($tablet, $desktop-large){
+
+  @include mq($tablet, $desktop-large) {
     font-size: 16px;
   }
-  @include mq('min', $desktop-large){
+
+  @include mq('min', $desktop-large) {
     font-size: 18px;
   }
 }
@@ -63,29 +67,31 @@ main {
   padding: 2rem;
   background-color: #fff;
   border-radius: .5rem;
-  box-shadow: 0 0 1rem rgba(0,0,0,.25);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, .25);
 
-  &.error{
+  &.error {
+
     // animation transition de l'affichage du message d'erreur
-    & #leHex{
+    & #leHex {
       margin-top: 4rem;
     }
 
-    & #errorMessage{
+    & #errorMessage {
       opacity: 1;
       top: -3rem;
     }
   }
 
-  &.disabled .col{
-    & label{
+  &.disabled .col {
+    & label {
       color: #a982a9;
     }
-    
-    & input[type="text"]{
+
+    & input[type="text"] {
       border-color: #a982a9;
     }
-    & button{
+
+    & button {
       background-color: #a982a9;
     }
   }
@@ -96,7 +102,9 @@ button {
   cursor: pointer;
 }
 
-:focus:not(:focus-visible) { outline: none }
+:focus:not(:focus-visible) {
+  outline: none
+}
 
 .hidden {
   position: absolute;
@@ -104,18 +112,18 @@ button {
 }
 
 #errorMessage,
-#leHex{
+#leHex {
   grid-area: 2 / 1;
 }
 
-#leHex{
+#leHex {
   margin-top: 0;
   z-index: 10;
   transition: margin-top var(--transition-error);
 }
 
 
-#errorMessage{
+#errorMessage {
   --bdr: 2px;
   --h: .6em;
   --clr-bdr: red;
@@ -132,10 +140,10 @@ button {
   opacity: 0;
   z-index: 1;
   transition: opacity var(--transition-error),
-              top var(--transition-error);
+    top var(--transition-error);
 
   &::before,
-  &::after{
+  &::after {
     position: absolute;
     content: '';
     @include size(0);
@@ -143,18 +151,18 @@ button {
     border-style: solid;
     border-width: 0 var(--h) var(--h) var(--h);
   }
-  
-  &::before{
+
+  &::before {
     top: calc(var(--h) * -1);
     border-color: transparent transparent var(--clr-bdr) transparent;
   }
-  
-  &::after{
+
+  &::after {
     top: calc(var(--h) * -1 + var(--bdr) * 1.414);
     border-color: transparent transparent var(--bgc) transparent;
   }
 
-  & span{
+  & span {
     padding: .125em .25em;
     font-family: monospace;
     color: #fff;
@@ -164,15 +172,16 @@ button {
 }
 
 /// ------------------------------------------------- Colors inputs
-#leInput{
+#leInput {
   grid-template: auto 1fr / 1fr;
 }
-#clr-input{
+
+#clr-input {
   width: 80%;
   margin: 0 auto;
   border-width: 2px;
-  border-top-right-radius:  var(--rad);
-  border-bottom-right-radius:  var(--rad);
+  border-top-right-radius: var(--rad);
+  border-bottom-right-radius: var(--rad);
 }
 
 .col {
@@ -201,18 +210,18 @@ button {
     font-size: 2rem;
     color: #fff;
     transition: background-color .125s ease-in-out;
-    
-    &:hover{
+
+    &:hover {
       background-color: color.scale($clr-1, $lightness: -40%);
     }
-    
-    &.copied{
+
+    &.copied {
       background-color: var(--clr-2);
     }
 
   }
 
-  &:focus-within > :not(label){
+  &:focus-within> :not(label) {
     box-shadow: 0 0 4px 4px green;
   }
 }
@@ -242,176 +251,181 @@ input[type="text"] {
 }
 
 /// ---------------------------------------------------------- Settings
-#settings{
-  display: grid;
-  grid-template: auto / 1fr;
-  grid-auto-flow: row;
-  row-gap: 1em;
-  @include mq('min', $tablet) {
-    grid-template: 1fr 1fr / 1fr 1fr;
-    grid-auto-flow: column;
-    row-gap: 2em;
-  }
-  justify-items: center;
-  column-gap: 2em;
+#panel {
   width: clamp(#{$phone}, 100vw, 800px);
   left: 50%;
   transform: translateX(-50%);
   background-color: hsl(45, 10%, 80%);
-  padding: 4rem 2em;
+  padding: 2rem 1em;
 
-  & .ligne{
-    width: calc(100% - 4em);
+  & #settings {
     display: grid;
-    grid-template-columns: 1fr 8rem;
-    align-items: center;
+    grid-template: auto / 1fr;
+    grid-auto-flow: row;
+    row-gap: 1em;
+
+    @include mq('min', $tablet) {
+      grid-template: 1fr 1fr / 1fr 1fr;
+      grid-auto-flow: column;
+      row-gap: 2em;
+    }
+
+    justify-items: center;
+    column-gap: 2em;
+
+    & .ligne {
+      width: calc(100% - 4em);
+      display: grid;
+      grid-template-columns: 1fr 8rem;
+      align-items: center;
+      gap: 1em;
+
+      &>*+* {
+        // aligne le 2e enfant à droite
+        justify-self: end;
+      }
+
+      & span {
+        font-size: .875em;
+        font-weight: 100;
+      }
+    }
+  }
+
+  // 1) Knobs ----------------------------
+  .knob_wrap {
+    display: grid;
+    grid-template-columns: #{$rayon * 2} 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 1em;
-
-    & > * + *{
-      // aligne le 2e enfant à droite
-      justify-self: end;
-    }
-
-    & span{
-      font-size: .875em;
-      font-weight: 100;
-    }
-  }
-}
-
-// 1) Knobs ----------------------------
-.knob_wrap {
-  display: grid;
-  grid-template-columns: #{$rayon * 2} 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 1em;
-}
-
-.knob {
-  grid-area: 1 / 1 / 3 / 2;
-  @include grid-center;
-  z-index: 1;
-
-  & label {
-    @include size($rayon * 2);
-    position: relative;
-    background-color: var(--clr-1);
-    border-radius: 50%;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      transition: transform .25s ease-in-out;
-    }
-
-    &::before {
-      // Curseur knob
-      --haut: 4px;
-      width: var(--rayon-knob);
-      height: var(--haut);
-      top: 50%;
-      left: 50%;
-      transform: translateY(-50%) rotate(var(--angleRotation));
-      transform-origin: 0 50%;
-      border-radius: calc(var(--haut) / 2);
-      background-color: hsla(0, 0%, 100%, .45);
-    }
-
-    &::after {
-      // Pointe
-      @include size(0);
-      @include triangle($rayon, $angleTriangle, var(--clr-1));
-      transform: translateY(-50%) rotate(var(--angleRotation));
-      z-index: -1;
-    }
   }
 
-  .checkbox:checked~label {
-    background-color: var(--clr-1);
+  .knob {
+    grid-area: 1 / 1 / 3 / 2;
+    @include grid-center;
+    z-index: 1;
 
-    &::before,
-    &::after {
-      transform: translatey(-50%) rotate(calc(var(--angleRotation) * -1));
-    }
-
-    &::after {
-      border-color: transparent transparent transparent var(--clr-1);
-    }
-  }
-}
-
-.choice {
-  justify-self: start;
-  align-self: center;
-  font-family: sans-serif;
-  // font-size: 1.2rem;
-  color: var(--clr-1);
-
-  &.disabled {
-    color: rgb(167, 167, 167);
-  }
-}
-
-// 2) Toggle switches ----------------------------
-.toggle {
-  label {
-    --w: 4.2rem;
-    --h: 2rem;
-    --m: .2rem; // "margin"
-    display: block;
-    position: relative;
-    width: var(--w);
-    height: var(--h);
-    border-radius: calc(var(--h) / 2);
-    background-color: hsl(var(--clr-grey));
-    transition: background-color .25s linear;
-    box-shadow: var(--bsh) inset;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
+    & label {
+      @include size($rayon * 2);
+      position: relative;
+      background-color: var(--clr-1);
       border-radius: 50%;
-      transition: left .125s linear;
+
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        transition: transform .25s ease-in-out;
+      }
+
+      &::before {
+        // Curseur knob
+        --haut: 4px;
+        width: var(--rayon-knob);
+        height: var(--haut);
+        top: 50%;
+        left: 50%;
+        transform: translateY(-50%) rotate(var(--angleRotation));
+        transform-origin: 0 50%;
+        border-radius: calc(var(--haut) / 2);
+        background-color: hsla(0, 0%, 100%, .45);
+      }
+
+      &::after {
+        // Pointe
+        @include size(0);
+        @include triangle($rayon, $angleTriangle, var(--clr-1));
+        transform: translateY(-50%) rotate(var(--angleRotation));
+        z-index: -1;
+      }
     }
 
-    &::before{
-      width: calc(var(--h) - (var(--m) * 2));
-      height: calc(var(--h) - (var(--m) * 2));
-      background: #fff;
-      top: var(--m);
-      left: var(--m);
-      box-shadow: var(--bsh);
-    }
+    .checkbox:checked~label {
+      background-color: var(--clr-1);
 
-    &:focus::after,
-    &:hover::after{
-      --l: 8px;
-      @include size(var(--l));
-      top: calc(var(--h)/2 - var(--l)/2);
-      left: calc(var(--h)/2 - var(--l)/2);
-      background-color: hsla(var(--clr-grey), .5);
-      z-index: 100;
+      &::before,
+      &::after {
+        transform: translatey(-50%) rotate(calc(var(--angleRotation) * -1));
+      }
+
+      &::after {
+        border-color: transparent transparent transparent var(--clr-1);
+      }
     }
   }
 
-  input:checked+label {
-    background-color: var(--clr-1);
+  .choice {
+    justify-self: start;
+    align-self: center;
+    font-family: sans-serif;
+    // font-size: 1.2rem;
+    color: var(--clr-1);
 
-    &::before {
-      left: calc(var(--w) - ((var(--h) - var(--m))));
+    &.disabled {
+      color: rgb(167, 167, 167);
+    }
+  }
+
+  // 2) Toggle switches ----------------------------
+  .toggle {
+    label {
+      --w: 4.2rem;
+      --h: 2rem;
+      --m: .2rem; // "margin"
+      display: block;
+      position: relative;
+      width: var(--w);
+      height: var(--h);
+      border-radius: calc(var(--h) / 2);
+      background-color: hsl(var(--clr-grey));
+      transition: background-color .25s linear;
+      box-shadow: var(--bsh) inset;
+
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        border-radius: 50%;
+        transition: left .125s linear;
+      }
+
+      &::before {
+        width: calc(var(--h) - (var(--m) * 2));
+        height: calc(var(--h) - (var(--m) * 2));
+        background: #fff;
+        top: var(--m);
+        left: var(--m);
+        box-shadow: var(--bsh);
+      }
+
+      &:focus::after,
+      &:hover::after {
+        --l: 8px;
+        @include size(var(--l));
+        top: calc(var(--h)/2 - var(--l)/2);
+        left: calc(var(--h)/2 - var(--l)/2);
+        background-color: hsla(var(--clr-grey), .5);
+        z-index: 100;
+      }
     }
 
-    &:focus::after,
-    &:hover::after{
-      left: calc(var(--w) - ((var(--h)/2 + var(--m))));
+    input:checked+label {
+      background-color: var(--clr-1);
+
+      &::before {
+        left: calc(var(--w) - ((var(--h) - var(--m))));
+      }
+
+      &:focus::after,
+      &:hover::after {
+        left: calc(var(--w) - ((var(--h)/2 + var(--m))));
+      }
     }
   }
 }
 
 /// Cog
-#cog{
+#cog {
   position: fixed;
   right: 1rem;
   bottom: 1rem;
@@ -423,7 +437,7 @@ input[type="text"] {
   background-size: cover;
   cursor: pointer;
 
-  &::after{
+  &::after {
     --offset: -6px;
     content: '';
     position: absolute;
@@ -435,10 +449,10 @@ input[type="text"] {
     border-radius: inherit;
   }
 
-  &:hover{
+  &:hover {
     background-color: var(--clr-1);
 
-    &::after{
+    &::after {
       border-color: var(--clr-1);
     }
   }
